# EAMML_Backend

./: .pdm.toml  pyproject.toml
app/: main.py
app/config/: config.py  config.yaml
app/controller/: user_mgmt.py
app/flask/: api_routes.py  auth_routes.py  flask_app.py  utils.py
app/models/: db_models.py
